--- a/industry_project_arcteryx.ipynb
+++ b/industry_project_arcteryx.ipynb
@@ -4,13 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Arcteryx Synthetic Dataset - Consumer Sizing\n",
+    "# Arcteryx Clothing Size Prediction\n",
+    "## Introduction\n",
+    "In the dynamic landscape of fashion and retail, accurate sizing recommendations are paramount. However, obtaining real-world clothing size data can be challenging due to privacy constraints, limited access, or time limitations. In this 36-hour hackathon project, we tackle this challenge by formulating a synthetic dataset—a carefully crafted foundation that mirrors the intricacies of actual data. Despite the synthetic nature of our data, the methodology we employ closely aligns with what we would apply when working with genuine customer information.\n",
     "\n",
-    "**Authors:** Lipsita Tripathy, Kate Popkova, and Quinci Birker \n",
+    "Our synthetic dataset emulates a scenario where each entry corresponds to a set of body measurements, including waist circumference, hip size, and chest dimensions. Additionally, we provide the corresponding garment size that would best fit each individual. Despite the synthetic nature of our data, the methodology we employ closely mirrors the approach we would use when working with genuine customer information.\n",
     "\n",
-    "### Introduction\n",
+    "## Project Overview\n",
+    "Our goal is to predict clothing sizes based on individual body measurements. Each entry in our synthetic dataset represents a unique customer ID, capturing their specific measurements (such as waist circumference, hip size, and chest dimensions). Additionally, we include the corresponding garment size that would best fit each customer.\n",
     "\n",
-    "Due to the constraints of time and the unavailability of real-world datasets, our approach involves formulating a synthetic dataset. This dataset is engineered to serve as a foundational framework, illustrating the methodology we would employ when applying modeling techniques to actual data. In this constructed dataset, each entry represents a unique customer id, capturing their specific body measurements along with the corresponding size of the garment that would fit them.\n",
+    "## Methodology\n",
+    "**Data Generation Constraints**:\n",
+    "Due to the constraints of time and the unavailability of real-world datasets, our approach involves formulating a synthetic dataset.\n",
+    "This dataset serves as a foundational framework, illustrating the methodology we would employ when applying modeling techniques to actual data.\n",
+    "\n",
+    "**Creating a Representative Framework**:\n",
+    "Each entry in our synthetic dataset is meticulously designed to resemble the diversity of body shapes and sizes encountered in practice.\n",
+    "We ensure statistical patterns similar to those observed in real-world sizing data.\n",
     "\n",
     "The sizing comes from Arcteryx website: Women's Jacket/Shirt Sizing Chart:\n",
     "\n",
@@ -62,6 +72,34 @@
     "from sklearn.utils import class_weight\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score, f1_score\n",
     "from sklearn.model_selection import GridSearchCV\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Synthetic Data Generation\n",
+    "- **Time Constraints and Data Availability**:\n",
+    "Given the limited time available, we create a synthetic dataset to demonstrate modeling techniques without relying on real customer data.\n",
+    "Our approach allows us to showcase the methodology that would apply when working with actual data.\n",
+    "\n",
+    "- Creating a Representative Framework:\n",
+    "We meticulously design the synthetic dataset to resemble the statistical patterns observed in real-world sizing data.\n",
+    "Each entry reflects the diversity of body shapes and sizes encountered in practice.\n",
+    "\n",
+    "- Features and Labels:\n",
+    "**Features**: Body measurements (e.g., waist_cm, hip_cm, chest_cm).\n",
+    "**Labels**: Corresponding garment size (e.g., small, medium, large)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The function \"generate_synthetic_data\" creates a dataset of shirt sizes and their corresponding measurements. \n",
+    "- It uses a normal distribution to generate synthetic data for each size based on the provided size chart and the number of samples. \n",
+    "- The generated data is then rounded to integers. \n",
+    "- The function is used with an example size chart for men’s shirts to create a synthetic dataset."
    ]
   },
   {
@@ -386,6 +424,13 @@
     "# Check the ratio of rows for each size in the dataset\n",
     "size_ratio = men_shirt_synthetic_data['Size'].value_counts(normalize=True)\n",
     "size_ratio\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Class Imbalance"
    ]
   },
   {
@@ -965,14 +1010,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Observations:\n",
+    "#### Findings:\n",
     "* The model has high accuracy, but performance varies across classes.\n",
     "* Class 4 has precision, recall, and F1-score of 0, indicating that it is not predicted correctly.\n",
     "* We will consider addressing class imbalance and adjusting model parameters for better performance.\n",
     "\n",
     "* We address the issue of class imbalance in a Decision Tree Classifier. The class weights are calculated using the 'balanced' method, and a new Decision Tree model is trained with these weights. The additional parameters, such as max_depth, min_samples_split, and min_samples_leaf, are set to control the complexity of the tree. \n",
     "* The model's performance is then evaluated on both the training and test sets using metrics like accuracy, precision, recall, and F1 score. \n",
-    "* This approach aims to improve the model's ability to correctly predict instances from minority classes and provide a more balanced assessment of its overall performance.\n"
+    "* This approach aims to improve the model's ability to correctly predict instances from minority classes and provide a more balanced assessment of its overall performance."
    ]
   },
   {
@@ -1074,7 +1119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### hyperparameter tuning"
+    "### Hyperparameter tuning"
    ]
   },
   {
@@ -1150,8 +1195,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Best Parameters:**\n",
-    "After the search is complete, you can get the best hyperparameters:"
+    "### Best Parameters:\n",
+    "After the search is complete, we can get the best hyperparameters:"
    ]
   },
   {
@@ -1182,8 +1227,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Train and Evaluate with Best Parameters:**\n",
-    "Train your model with the best hyperparameters and evaluate its performance on the test set."
+    "### Train and Evaluate with Best Parameters:\n",
+    "Lets train our model with the best hyperparameters and evaluate its performance on the test set."
    ]
   },
   {
@@ -1202,8 +1247,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Evaluate:**\n",
-    "Evaluate the performance using metrics like accuracy, precision, recall, and F1 score."
+    "### Evaluate:\n",
+    "We can evaluate the performance using metrics like accuracy, precision, recall, and F1 score."
    ]
   },
   {
@@ -1384,7 +1429,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our model emphasizes the significance of Waist_cm and Hip_cm followed by Chest_cm features in predicting clothing sizes. The higher importance of Waist_cm suggests its strong influence, indicating that variations in waist circumference significantly contribute to size predictions. Similarly, Hip_cm follows closely, highlighting its role in distinguishing between size categories. These findings underscore the importance of body proportions, particularly waist and hip measurements, in accurate clothing size predictions. Understanding these key features provides insights into the factors shaping size recommendations and potential improvements for the model."
+    "#### Findings:\n",
+    "- Our model emphasizes the significance of Waist_cm and Hip_cm followed by Chest_cm features in predicting clothing sizes. \n",
+    "- The higher importance of Waist_cm suggests its strong influence, indicating that variations in waist circumference significantly contribute to size predictions. \n",
+    "- Similarly, Hip_cm follows closely, highlighting its role in distinguishing between size categories. \n",
+    "- These findings underscore the importance of body proportions, particularly waist and hip measurements, in accurate clothing size predictions. \n",
+    "- Understanding these key features provides insights into the factors shaping size recommendations and potential improvements for the model."
    ]
   },
   {
@@ -1410,6 +1460,16 @@
     "plt.ylabel('Accuracy')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "Our well-tuned model demonstrates excellent performance, and understanding the impact of specific body measurements can guide personalized sizing recommendations. As we continue to refine our model, we can enhance the overall shopping experience for customers.\n",
+    "\n",
+    "By understanding the impact of specific body measurements on clothing size predictions, we pave the way for personalized sizing recommendations in the fashion industry. Say goodbye to fit issues and hello to comfort and confidence on your adventures!"
    ]
   }
  ],
